NIVision/NativeCameraServer/NIIMAQdx.h

        typedef unsigned long       uInt32;
            typedef unsigned int    uInt32;
            typedef unsigned long   uInt32;
    typedef uInt32              bool32;
    typedef uInt32              IMAQdxSession;
typedef struct Image_struct Image;
typedef enum IMAQdxError_enum {
    IMAQdxErrorSuccess = 0x0,                   
    IMAQdxErrorSystemMemoryFull = 0xBFF69000,   
    IMAQdxErrorInternal,                        
    IMAQdxErrorInvalidParameter,                
    IMAQdxErrorInvalidPointer,                  
    IMAQdxErrorInvalidInterface,                
    IMAQdxErrorInvalidRegistryKey,              
    IMAQdxErrorInvalidAddress,                  
    IMAQdxErrorInvalidDeviceType,               
    IMAQdxErrorNotImplemented,                  
    IMAQdxErrorCameraNotFound,                  
    IMAQdxErrorCameraInUse,                     
    IMAQdxErrorCameraNotInitialized,            
    IMAQdxErrorCameraRemoved,                   
    IMAQdxErrorCameraRunning,                   
    IMAQdxErrorCameraNotRunning,                
    IMAQdxErrorAttributeNotSupported,           
    IMAQdxErrorAttributeNotSettable,            
    IMAQdxErrorAttributeNotReadable,            
    IMAQdxErrorAttributeOutOfRange,             
    IMAQdxErrorBufferNotAvailable,              
    IMAQdxErrorBufferListEmpty,                 
    IMAQdxErrorBufferListLocked,                
    IMAQdxErrorBufferListNotLocked,             
    IMAQdxErrorResourcesAllocated,              
    IMAQdxErrorResourcesUnavailable,            
    IMAQdxErrorAsyncWrite,                      
    IMAQdxErrorAsyncRead,                       
    IMAQdxErrorTimeout,                         
    IMAQdxErrorBusReset,                        
    IMAQdxErrorInvalidXML,                      
    IMAQdxErrorFileAccess,                      
    IMAQdxErrorInvalidCameraURLString,          
    IMAQdxErrorInvalidCameraFile,               
    IMAQdxErrorGenICamError,                    
    IMAQdxErrorFormat7Parameters,               
    IMAQdxErrorInvalidAttributeType,            
    IMAQdxErrorDLLNotFound,                     
    IMAQdxErrorFunctionNotFound,                
    IMAQdxErrorLicenseNotActivated,             
    IMAQdxErrorCameraNotConfiguredForListener,  
    IMAQdxErrorCameraMulticastNotAvailable,     
    IMAQdxErrorBufferHasLostPackets,            
    IMAQdxErrorGiGEVisionError,                 
    IMAQdxErrorNetworkError,                    
    IMAQdxErrorCameraUnreachable,               
    IMAQdxErrorHighPerformanceNotSupported,     
    IMAQdxErrorInterfaceNotRenamed,             
    IMAQdxErrorNoSupportedVideoModes,           
    IMAQdxErrorSoftwareTriggerOverrun,          
    IMAQdxErrorTestPacketNotReceived,           
    IMAQdxErrorCorruptedImageReceived,          
    IMAQdxErrorCameraConfigurationHasChanged,   
    IMAQdxErrorCameraInvalidAuthentication,     
    IMAQdxErrorUnknownHTTPError,                
    IMAQdxErrorKernelDriverUnavailable,         
    IMAQdxErrorPixelFormatDecoderUnavailable,   
    IMAQdxErrorFirmwareUpdateNeeded,            
    IMAQdxErrorFirmwareUpdateRebootNeeded,      
    IMAQdxErrorLightingCurrentOutOfRange,       
    IMAQdxErrorUSB3VisionError,                 
    IMAQdxErrorInvalidU3VUSBDescriptor,         
    IMAQdxErrorU3VInvalidControlInterface,      
    IMAQdxErrorU3VControlInterfaceError,        
    IMAQdxErrorU3VInvalidEventInterface,        
    IMAQdxErrorU3VEventInterfaceError,          
    IMAQdxErrorU3VInvalidStreamInterface,       
    IMAQdxErrorU3VStreamInterfaceError,         
    IMAQdxErrorU3VUnsupportedConnectionSpeed,   
    IMAQdxErrorU3VInsufficientPower,            
    IMAQdxErrorU3VInvalidMaxCurrent,            
    IMAQdxErrorBufferIncompleteData,            
    IMAQdxErrorCameraAcquisitionConfigFailed,   
    IMAQdxErrorCameraClosePending,              
    IMAQdxErrorSoftwareFault,                   
    IMAQdxErrorCameraPropertyInvalid,           
    IMAQdxErrorJumboFramesNotEnabled,           
    IMAQdxErrorBayerPixelFormatNotSelected,     
    IMAQdxErrorGuard = 0xFFFFFFFF,
} IMAQdxError;
typedef enum IMAQdxBusType_enum {
    IMAQdxBusTypeFireWire = 0x31333934,
    IMAQdxBusTypeEthernet = 0x69707634,
    IMAQdxBusTypeSimulator = 0x2073696D,
    IMAQdxBusTypeDirectShow = 0x64736877,
    IMAQdxBusTypeIP = 0x4950636D,
    IMAQdxBusTypeSmartCam2 = 0x53436132,
    IMAQdxBusTypeUSB3Vision = 0x55534233,
    IMAQdxBusTypeUVC = 0x55564320,
    IMAQdxBusTypeGuard = 0xFFFFFFFF,
} IMAQdxBusType;
typedef enum IMAQdxCameraControlMode_enum {
    IMAQdxCameraControlModeController,
    IMAQdxCameraControlModeListener,
    IMAQdxCameraControlModeGuard = 0xFFFFFFFF,
} IMAQdxCameraControlMode;
typedef enum IMAQdxBufferNumberMode_enum {
    IMAQdxBufferNumberModeNext,
    IMAQdxBufferNumberModeLast,
    IMAQdxBufferNumberModeBufferNumber,
    IMAQdxBufferNumberModeGuard = 0xFFFFFFFF,
} IMAQdxBufferNumberMode;
typedef enum IMAQdxPnpEvent_enum {
    IMAQdxPnpEventCameraAttached,
    IMAQdxPnpEventCameraDetached,
    IMAQdxPnpEventBusReset,
    IMAQdxPnpEventGuard = 0xFFFFFFFF,
} IMAQdxPnpEvent;
typedef enum IMAQdxAttributeType_enum {    
    IMAQdxAttributeTypeU32,
    IMAQdxAttributeTypeI64,
    IMAQdxAttributeTypeF64,
    IMAQdxAttributeTypeString,
    IMAQdxAttributeTypeEnum,
    IMAQdxAttributeTypeBool,
    IMAQdxAttributeTypeCommand,
    IMAQdxAttributeTypeBlob,
    IMAQdxAttributeTypeGuard = 0xFFFFFFFF,
} IMAQdxAttributeType;
typedef enum IMAQdxValueType_enum {    
    IMAQdxValueTypeU32,
    IMAQdxValueTypeI64,
    IMAQdxValueTypeF64,
    IMAQdxValueTypeString,
    IMAQdxValueTypeEnumItem,
    IMAQdxValueTypeBool,
    IMAQdxValueTypeDisposableString,
    IMAQdxValueTypeGuard = 0xFFFFFFFF,
} IMAQdxValueType;
typedef enum IMAQdxAttributeVisibility_enum {
    IMAQdxAttributeVisibilitySimple = 0x00001000,
    IMAQdxAttributeVisibilityIntermediate = 0x00002000,
    IMAQdxAttributeVisibilityAdvanced = 0x00004000,
    IMAQdxAttributeVisibilityGuard = 0xFFFFFFFF,
} IMAQdxAttributeVisibility;
typedef struct IMAQdxCameraInformation_struct {
    uInt32 Type;
    uInt32 Version;
    uInt32 Flags;
    uInt32 SerialNumberHi;
    uInt32 SerialNumberLo;
    IMAQdxBusType BusType;
    char InterfaceName[IMAQDX_MAX_API_STRING_LENGTH];
    char VendorName[IMAQDX_MAX_API_STRING_LENGTH];
    char ModelName[IMAQDX_MAX_API_STRING_LENGTH];
    char CameraFileName[IMAQDX_MAX_API_STRING_LENGTH];
    char CameraAttributeURL[IMAQDX_MAX_API_STRING_LENGTH];
} IMAQdxCameraInformation;
typedef struct IMAQdxAttributeInformation_struct {
    IMAQdxAttributeType Type;
    bool32 Readable;
    bool32 Writable;
    char Name[IMAQDX_MAX_API_STRING_LENGTH];
} IMAQdxAttributeInformation;
typedef struct IMAQdxEnumItem_struct {
    uInt32 Value;
    uInt32 Reserved;
    char Name[IMAQDX_MAX_API_STRING_LENGTH];
} IMAQdxEnumItem;
typedef IMAQdxEnumItem IMAQdxVideoMode;
typedef     uInt32 (NI_FUNC *FrameDoneEventCallbackPtr)(IMAQdxSession id, uInt32 bufferNumber, void* callbackData);
typedef     uInt32 (NI_FUNC *PnpEventCallbackPtr)(IMAQdxSession id, IMAQdxPnpEvent pnpEvent, void* callbackData);
IMAQdxError NI_FUNC IMAQdxSnap(IMAQdxSession id, Image* image);
IMAQdxError NI_FUNC IMAQdxConfigureGrab(IMAQdxSession id);
IMAQdxError NI_FUNC IMAQdxGrab(IMAQdxSession id, Image* image, bool32 waitForNextBuffer, uInt32* actualBufferNumber);
IMAQdxError NI_FUNC IMAQdxSequence(IMAQdxSession id, Image* images[], uInt32 count);
IMAQdxError NI_FUNC IMAQdxDiscoverEthernetCameras(const char* address, uInt32 timeout);
IMAQdxError NI_FUNC IMAQdxEnumerateCameras(IMAQdxCameraInformation cameraInformationArray[], uInt32* count, bool32 connectedOnly);
IMAQdxError NI_FUNC IMAQdxResetCamera(const char* name, bool32 resetAll);
IMAQdxError NI_FUNC IMAQdxOpenCamera(const char* name, IMAQdxCameraControlMode mode, IMAQdxSession* id);
IMAQdxError NI_FUNC IMAQdxCloseCamera(IMAQdxSession id);
IMAQdxError NI_FUNC IMAQdxConfigureAcquisition(IMAQdxSession id, bool32 continuous, uInt32 bufferCount);
IMAQdxError NI_FUNC IMAQdxStartAcquisition(IMAQdxSession id);
IMAQdxError NI_FUNC IMAQdxGetImage(IMAQdxSession id, Image* image, IMAQdxBufferNumberMode mode, uInt32 desiredBufferNumber, uInt32* actualBufferNumber);
IMAQdxError NI_FUNC IMAQdxGetImageData(IMAQdxSession id, void* buffer, uInt32 bufferSize, IMAQdxBufferNumberMode mode, uInt32 desiredBufferNumber, uInt32* actualBufferNumber);
IMAQdxError NI_FUNC IMAQdxStopAcquisition(IMAQdxSession id);
IMAQdxError NI_FUNC IMAQdxUnconfigureAcquisition(IMAQdxSession id);
IMAQdxError NI_FUNC IMAQdxEnumerateVideoModes(IMAQdxSession id, IMAQdxVideoMode videoModeArray[], uInt32* count, uInt32* currentMode);
IMAQdxError NI_FUNC IMAQdxEnumerateAttributes(IMAQdxSession id, IMAQdxAttributeInformation attributeInformationArray[], uInt32* count, const char* root);
IMAQdxError NI_FUNC IMAQdxGetAttribute(IMAQdxSession id, const char* name, IMAQdxValueType type, void* value);
IMAQdxError NI_FUNCC IMAQdxSetAttribute(IMAQdxSession id, const char* name, IMAQdxValueType type, ...);
IMAQdxError NI_FUNC IMAQdxGetAttributeMinimum(IMAQdxSession id, const char* name, IMAQdxValueType type, void* value);
IMAQdxError NI_FUNC IMAQdxGetAttributeMaximum(IMAQdxSession id, const char* name, IMAQdxValueType type, void* value);
IMAQdxError NI_FUNC IMAQdxGetAttributeIncrement(IMAQdxSession id, const char* name, IMAQdxValueType type, void* value);
IMAQdxError NI_FUNC IMAQdxGetAttributeType(IMAQdxSession id, const char* name, IMAQdxAttributeType* type);
IMAQdxError NI_FUNC IMAQdxIsAttributeReadable(IMAQdxSession id, const char* name, bool32* readable);
IMAQdxError NI_FUNC IMAQdxIsAttributeWritable(IMAQdxSession id, const char* name, bool32* writable);
IMAQdxError NI_FUNC IMAQdxEnumerateAttributeValues(IMAQdxSession id, const char* name, IMAQdxEnumItem list[], uInt32* size);
IMAQdxError NI_FUNC IMAQdxGetAttributeTooltip(IMAQdxSession id, const char* name, char* tooltip, uInt32 length);
IMAQdxError NI_FUNC IMAQdxGetAttributeUnits(IMAQdxSession id, const char* name, char* units, uInt32 length);
IMAQdxError NI_FUNC IMAQdxRegisterFrameDoneEvent(IMAQdxSession id, uInt32 bufferInterval, FrameDoneEventCallbackPtr callbackFunction, void* callbackData);
IMAQdxError NI_FUNC IMAQdxRegisterPnpEvent(IMAQdxSession id, IMAQdxPnpEvent event, PnpEventCallbackPtr callbackFunction, void* callbackData);
IMAQdxError NI_FUNC IMAQdxWriteRegister(IMAQdxSession id, uInt32 offset, uInt32 value);
IMAQdxError NI_FUNC IMAQdxReadRegister(IMAQdxSession id, uInt32 offset, uInt32* value);
IMAQdxError NI_FUNC IMAQdxWriteMemory(IMAQdxSession id, uInt32 offset, const char* values, uInt32 count);
IMAQdxError NI_FUNC IMAQdxReadMemory(IMAQdxSession id, uInt32 offset, char* values, uInt32 count);
IMAQdxError NI_FUNC IMAQdxGetErrorString(IMAQdxError error, char* message, uInt32 messageLength);
IMAQdxError NI_FUNC IMAQdxWriteAttributes(IMAQdxSession id, const char* filename);
IMAQdxError NI_FUNC IMAQdxReadAttributes(IMAQdxSession id, const char* filename);
IMAQdxError NI_FUNC IMAQdxResetEthernetCameraAddress(const char* name, const char* address, const char* subnet, const char* gateway, uInt32 timeout);
IMAQdxError NI_FUNC IMAQdxEnumerateAttributes2(IMAQdxSession id, IMAQdxAttributeInformation attributeInformationArray[], uInt32* count, const char* root, IMAQdxAttributeVisibility visibility);
IMAQdxError NI_FUNC IMAQdxGetAttributeVisibility(IMAQdxSession id, const char* name, IMAQdxAttributeVisibility* visibility);
IMAQdxError NI_FUNC IMAQdxGetAttributeDescription(IMAQdxSession id, const char* name, char* description, uInt32 length);
IMAQdxError NI_FUNC IMAQdxGetAttributeDisplayName(IMAQdxSession id, const char* name, char* displayName, uInt32 length);
IMAQdxError NI_FUNC IMAQdxDispose(void* buffer);